[gd_scene load_steps=18 format=3 uid="uid://dbbakcoerlvl0"]

[ext_resource type="Script" path="res://Enemies/BaseEnemy/base_enemy.gd" id="1_4vuj1"]
[ext_resource type="Texture2D" uid="uid://d2jably0jhn4a" path="res://Enemies/pixie/FlutteringPixieIdle.png" id="2_k1q0w"]
[ext_resource type="Texture2D" uid="uid://dt1amv2jt0yu1" path="res://Shadows/SmallShadow.png" id="3_sskeg"]
[ext_resource type="PackedScene" uid="uid://cjk2j1x8svijx" path="res://Overlap/hurtbox.tscn" id="3_t318n"]
[ext_resource type="PackedScene" uid="uid://onkp6yacs7v4" path="res://stats.tscn" id="4_oxyjr"]
[ext_resource type="PackedScene" uid="uid://dfo0rkub6k451" path="res://Overlap/hitbox.tscn" id="5_rbx7e"]
[ext_resource type="Script" path="res://Overlap/state_machine.gd" id="8_xi17d"]
[ext_resource type="Script" path="res://Enemies/BaseEnemy/chase.gd" id="9_h3a0a"]
[ext_resource type="Script" path="res://Enemies/pixie/dead.gd" id="10_w4ggh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tvut2"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_shfmy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eki21"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4ldi1"]
radius = 9.05539

[sub_resource type="Animation" id="Animation_th4ax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D3:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r16am"]
resource_name = "death_anim_standard"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(0, -7), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 0.6), Vector2(0.1, 0.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_death_effect"
}]
}

[sub_resource type="Animation" id="Animation_2b346"]
resource_name = "default"
length = 0.65
loop_mode = 1
step = 0.18
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.18, 0.36, 0.54),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qpp2h"]
_data = {
"RESET": SubResource("Animation_th4ax"),
"death_anim_default": SubResource("Animation_r16am"),
"default": SubResource("Animation_2b346")
}

[node name="Pixie" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_4vuj1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -14)
texture = ExtResource("2_k1q0w")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_tvut2")

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture = ExtResource("3_sskeg")

[node name="Hurtbox" parent="." instance=ExtResource("3_t318n")]
visible = false
position = Vector2(0, -14)
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_shfmy")
debug_color = Color(0.913725, 0, 0.721569, 0.419608)

[node name="Hitbox" parent="." instance=ExtResource("5_rbx7e")]
unique_name_in_owner = true
position = Vector2(0, -14)
collision_layer = 64

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_eki21")

[node name="FlockView" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 256
collision_mask = 256

[node name="ViewRadius" type="CollisionShape2D" parent="FlockView"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_4ldi1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qpp2h")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("8_xi17d")
initial_state = NodePath("Chase")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("9_h3a0a")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("10_w4ggh")

[node name="Stats" parent="." instance=ExtResource("4_oxyjr")]
max_health = 6

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="FlockView" to="StateMachine/Chase" method="_on_flock_view_area_entered"]
[connection signal="area_exited" from="FlockView" to="StateMachine/Chase" method="_on_flock_view_area_exited"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
